SwipeDelegate: only consume child events if we grabbed the mouse

Change-Id: Ie808d06824e3bbdb36111625fbb5c59ee9d4e2a4
Task-number: QTBUG-54648
Reviewed-by: J-P Nurmi <jpnurmi@qt.io>